name:                extended-containers-lens
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konsumlamm/extended-containers-lens#readme
license:             BSD3
license-file:        LICENSE
author:              konsumlamm
maintainer:          konsumlamm@gmail.com
copyright:           2019 konsumlamm
category:            Data Structures, Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:
    Data.AMT.Lens
    Data.Heap.Lens
    Data.PrioHeap.Lens
  ghc-options:         -O -W -Werror
  build-depends:       base >= 4.7 && < 5, extended-containers, lens
  default-language:    Haskell2010
